syntax = "proto3";
option java_multiple_files = true;
package my.project.gen.grpc;

service TestService {
  rpc test(TestRequest) returns (TestResponse);
}

message TestRequest {
  string message = 1;
}

message TestResponse {
  string message = 1;
}